# reg_normalizer

./: .gitignore  MANIFEST.in  PLAN.md  PYPI_UPLOAD_GUIDE.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: create-release.yml  python-publish.yml
data/interim/: data_fixed_basket_check.xlsx  ibr_2005_2025_check.xlsx  normalizers_final_v20260518.csv  normalizers_final_v20260518.xlsx  normalizers_v20260216.csv  normalizers_v20260216_check.xlsx
data/processed/: economics_v20260211.xlsx  fixed_basket_final.xlsx
notebooks/: 1.0-vk-develop.ipynb  add-indicators.ipynb  examples.ipynb
reg_normalizer/: __init__.py  constants.py  indicators.py  regions_validator.py
reg_normalizer/data/interim/: indicators_descriptions.yaml  normalizers.csv  regions_etalon_v2.0.yaml
reports/: merging_strategies.md
src/: regions_validator.py
tests/: __init__.py  test_indicators.py  test_regions_validator.py
